# gpuNLSE

./: LICENSE.md  README.md
src/: CMakeLists.txt  calLNexp.cu  glass_reduced.txt  glass_reduced2.txt  job_pygpu.slurm  main_loop.cu  rk4Method.cu  routines.cu
src/getData/: getdata.py  job_pygpu_getdata.slurm
